<resources>
    <string name="app_name">Ride Tracker</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="remember_me">Remember Me</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="click_here">Click Here</string>
    <string name="have_administrative_access">Have Administrative Access?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="recover_account">Recover Account</string>
    <string name="register">register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="please_wait">Please Wait</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="history">History</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="google_plus_title">Google Plus</string>
    <string name="google_maps_title">Maps</string>
    <string name="google_messenger_title">Messenger</string>
    <string name="header_title">Header Title</string>
    <string name="header_count">List Count</string>
    <string name="tracker_id">Tracker Id</string>
    <string name="list_of_location">List of Location</string>
    <string name="start_location">Start Location</string>
    <string name="end_location">End Location</string>
    <string name="ride_history">Ride History</string>
    <string name="ride_detail">Ride Detail</string>
    <string name="menu_dots">⋮</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>

</resources>
