<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.twointerns.ridetracker.view.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.twointerns.ridetracker.view.fragment.history.HistoryFragment"
        android:label="@string/ride_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_navigation_history_to_detailRideFragment"
            app:destination="@id/detailRideFragment" />
        <argument
            android:name="locationData"
            app:argType="com.twointerns.ridetracker.model.entity.LocationData" />
    </fragment>
    <fragment
        android:id="@+id/detailRideFragment"
        android:name="com.twointerns.ridetracker.view.fragment.detail.DetailRideFragment"
        android:label="@string/ride_detail"
        tools:layout="@layout/detail_ride_fragment">
        <argument
            android:name="locationData"
            app:argType="com.twointerns.ridetracker.model.entity.LocationData" />
    </fragment>

</navigation>