<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LogInFragment">
    <data>
        <variable
            name="login"
            type="com.twointerns.ridetracker.viewmodel.LogInViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/logo_login"
                android:layout_width="280dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/biker_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/title_login"
                style="@style/RobotoBold_Blue_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/log_in"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@id/logo_login"
                app:layout_constraintStart_toStartOf="@id/logo_login"
                app:layout_constraintTop_toBottomOf="@id/logo_login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_wrap_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="22dp"
                android:hint="@string/email"
                android:paddingBottom="10dp"
                android:textColorHint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_login"
                    style="@style/RobotoRegular_Blue_18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="10dp"
                    android:focusedByDefault="false"
                    android:textColor="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_wrap_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="22dp"
                android:hint="@string/password"
                android:paddingBottom="10dp"
                android:textColorHint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_wrap_login"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_login"
                    style="@style/RobotoRegular_Blue_18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:focusedByDefault="false"
                    android:textColor="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/remember_login"
                style="@style/RobotoRegular_Blue_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/remember_me"
                app:layout_constraintStart_toStartOf="@id/password_wrap_login"
                app:layout_constraintTop_toBottomOf="@id/password_wrap_login" />


            <TextView
                android:id="@+id/forgot_password_login"
                style="@style/RobotoRegular_Black_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_password"
                app:layout_constraintEnd_toStartOf="@+id/forgot_password_link_login"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/password_wrap_login"
                app:layout_constraintTop_toBottomOf="@+id/remember_login" />

            <TextView
                android:id="@+id/forgot_password_link_login"
                style="@style/RobotoBold_Blue_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/recover_account"
                app:layout_constraintBottom_toTopOf="@+id/forgot_password_login"
                app:layout_constraintEnd_toEndOf="@+id/password_wrap_login"
                app:layout_constraintStart_toEndOf="@+id/forgot_password_login"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_login" />

            <TextView
                android:id="@+id/sign_up_login"
                style="@style/RobotoRegular_Black_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/don_t_have_an_account"
                app:layout_constraintEnd_toStartOf="@+id/sign_up_link_login"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/password_wrap_login"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_login" />

            <TextView
                android:id="@+id/sign_up_link_login"
                style="@style/RobotoBold_Blue_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/sign_up"
                app:layout_constraintBottom_toTopOf="@+id/sign_up_login"
                app:layout_constraintEnd_toEndOf="@+id/password_wrap_login"
                app:layout_constraintStart_toEndOf="@+id/sign_up_login"
                app:layout_constraintTop_toBottomOf="@id/sign_up_login" />

            <Button
                android:id="@+id/login_button"
                style="@style/RobotoRegular_Blue_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/blue_stroke"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/log_in"
                android:onClick="@{()->login.logIn(emailLogin.getText().toString(),passwordLogin.getText().toString())}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password_wrap_login"
                app:layout_constraintStart_toStartOf="@+id/password_wrap_login"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_login" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>