<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterFragment">
    <data>
        <variable
            name="register"
            type="com.twointerns.ridetracker.viewmodel.RegisterViewModel" />

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/logo_register"
                android:layout_width="280dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/biker_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/title_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/register"
                style="@style/RobotoBold_Blue_22"
                app:layout_constraintEnd_toEndOf="@id/logo_register"
                app:layout_constraintStart_toStartOf="@id/logo_register"
                app:layout_constraintTop_toBottomOf="@id/logo_register" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_wrap_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="22dp"
                android:hint="@string/email"
                android:paddingBottom="10dp"
                android:textColorHint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_register">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/RobotoRegular_Blue_18"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_wrap_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="22dp"
                android:hint="@string/password"
                android:paddingBottom="10dp"
                android:textColorHint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_wrap_register"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/RobotoRegular_Blue_18"
                    android:paddingBottom="10dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/login_register"
                style="@style/RobotoRegular_Black_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/already_have_an_account"
                app:layout_constraintEnd_toStartOf="@+id/login_link_register"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/password_wrap_register"
                app:layout_constraintTop_toBottomOf="@+id/password_wrap_register" />

            <TextView
                android:id="@+id/login_link_register"
                style="@style/RobotoBold_Blue_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/log_in"
                app:layout_constraintBottom_toTopOf="@+id/login_register"
                app:layout_constraintEnd_toEndOf="@+id/password_wrap_register"
                app:layout_constraintStart_toEndOf="@+id/login_register"
                app:layout_constraintTop_toBottomOf="@id/login_register" />


            <Button
                android:id="@+id/register_button"
                style="@style/RobotoRegular_Blue_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/blue_stroke"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/register"
                android:onClick="@{()-> register.registerAccount(emailRegister.getText().toString(),passwordRegister.getText().toString())}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password_wrap_register"
                app:layout_constraintStart_toStartOf="@+id/password_wrap_register"
                app:layout_constraintTop_toBottomOf="@+id/login_register" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>